--- a/static/index.html
+++ b/static/index.html
@@ -13,16 +13,23 @@
   <script src="/assets/js/anym.js"></script>
   <title>Ezic | V9</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-6YEQ7Q0XRC"></script>
-  <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-6YEQ7Q0XRC');</script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-6YEQ7Q0XRC');
+  </script>
   <style>
     .button-6 {
-      background-color: #4CAF50; /* Green */
+      background-color: #e7e7e7; /* Default light grey */
       border: none;
-      color: white;
+      color: black;
       padding: 15px 32px;
       text-align: center;
       text-decoration: none;
-      display: inline-block;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
       font-size: 16px;
       margin: 4px 2px;
       cursor: pointer;
@@ -30,9 +37,13 @@
     }
 
     .button-6:hover {
-      background-color: white;
+      background-color: #d4d4d4; /* Darker grey */
       color: black;
-      border: 2px solid #4CAF50;
+      border: 2px solid #d4d4d4;
+    }
+
+    .button-6 i {
+      margin-right: 8px; /* Space between icon and text */
     }
   </style>
 </head>
@@ -60,12 +71,22 @@
   </div>
 </div>
 <nav id="mytopnav">
-  <button class="button-6" anim="ripple" onclick="send('/inc.html')"><i class="bi bi-joystick" style="font-size:30px;"></i>Brothers in Battle</button>
-  <button class="button-6" anim="ripple" onclick="send('/settings.html')"><i class="bi bi-gear" style="font-size:30px;"></i>Settings</button>
-  <button class="button-6" anim="ripple" onclick="send('/gms')"><i class="bi bi-joystick" style="font-size:30px;"></i>Games</button>
-  <button class="button-6" anim="ripple" onclick="send('/apps')"><i class="bi bi-grid-fill" style="font-size:30px;"></i>Apps</button>
+  <button class="button-6" anim="ripple" onclick="send('/inc.html')">
+    <i class="bi bi-joystick" style="font-size:30px;"></i>Brothers in Battle
+  </button>
+  <button class="button-6" anim="ripple" onclick="send('/settings.html')">
+    <i class="bi bi-gear" style="font-size:30px;"></i>Settings
+  </button>
+  <button class="button-6" anim="ripple" onclick="send('/gms')">
+    <i class="bi bi-joystick" style="font-size:30px;"></i>Games
+  </button>
+  <button class="button-6" anim="ripple" onclick="send('/apps')">
+    <i class="bi bi-grid-fill" style="font-size:30px;"></i>Apps
+  </button>
   <br>
-  <a href="#" class="title" anim="ripple"><img src="/assets/img/doge.jpg" style="width:22px;height:22px;" id="logo"> Ezic Unblocker</a>
+  <a href="#" class="title" anim="ripple">
+    <img src="/assets/img/doge.jpg" style="width:22px;height:22px;" id="logo"> Ezic Unblocker
+  </a>
   <button class="button-6" anim="ripple" onclick="window.location.href='https://www.google.com'">
     <i class="bi bi-joystick" style="font-size:30px;"></i> Go
   </button>
@@ -86,11 +107,11 @@
   <div class="bottom-right-content themesExcluded">
     <a href="/credits">Credits</a>
   </div>
-  <script rel="preload" src="/assets/js/main.js"></script>
-  <script src="/assets/js/themes.js"></script>
-  <script src="/assets/js/particles.js"></script>
-  <script src="/assets/js/index.js"></script>
-  <script type='text/javascript' src='//pl22991509.profitablegatecpm.com/df/d2/e1/dfd2e1c094b00a158058ce0068d7df84.js'></script>
 </div>
+<script rel="preload" src="/assets/js/main.js"></script>
+<script src="/assets/js/themes.js"></script>
+<script src="/assets/js/particles.js"></script>
+<script src="/assets/js/index.js"></script>
+<script type='text/javascript' src='//pl22991509.profitablegatecpm.com/df/d2/e1/dfd2e1c094b00a158058ce0068d7df84.js'></script>
 </body>
 </html>
