--- a/static/index.html
+++ b/static/index.html
@@ -44,8 +44,14 @@
   </div>
 </div>
 <nav id="mytopnav">
+    <button class="button-6" anim="ripple" onclick="window.location.href='https://docs.google.com/document/d/1TesuQ9CXum2Pq63dnS1am04rknqt-qv9Y7c6zmcac5o/edit?usp=sharing'">
+    <i class="bi bi-joystick" style="font-size:30px;"></i> Updates
+  </button>
+    <button class="button-6" anim="ripple" onclick="window.location.href='https://docs.google.com/document/d/1yq3C8dk_Eo5a9PvbsxpEq1r86wivcgc8lylkM_R2Xy8/edit?usp=sharing'">
+    <i class="bi bi-joystick" style="font-size:30px;"></i> Stealth
+  </button>
   <button class="button-6" anim="ripple" onclick="send('/inc.html')">
-    <i class="bi bi-joystick" style="font-size:30px;"></i>Brothers in Battle
+    <i class="bi bi-joystick" style="font-size:30px;"></i>Other gamehubs
   </button>
   <button class="button-6" anim="ripple" onclick="send('/settings.html')">
     <i class="bi bi-gear" style="font-size:30px;"></i>Settings
@@ -60,9 +66,7 @@
   <a href="#" class="title" anim="ripple">
     <img src="/assets/img/doge.jpg" style="width:22px;height:22px;" id="logo"> Ezic Unblocker
   </a>
-  <button class="button-6" anim="ripple" onclick="window.location.href='https://www.google.com'">
-    <i class="bi bi-joystick" style="font-size:30px;"></i> Go
-  </button>
+
 </nav>
 <div style="text-align:center;color:white;margin-top: 80px;z-index:1;" class="themesExcluded">
   <div class="themesExcluded">
@@ -74,8 +78,8 @@
   </div>
   <p id="time" class="clock footer"></p>
   <div class="footer themesExcluded" style="text-align:right;">
-    <a href="https://discord.gg/sWPHCdxCPU" target="new"><i class="bi bi-discord"></i></a>
-    <a href="https://github.com/dogenetwork/v4" target="new"><i class="bi bi-github"></i></a>
+    <a href="https://discord.gg/sHNpXMvdZ5" target="new"><i class="bi bi-discord"></i></a>
+    <a href="https://github.com/ODMSTAG" target="new"><i class="bi bi-github"></i></a>
   </div>
   <div class="bottom-right-content themesExcluded">
     <a href="/credits">Credits</a>
