--- a/static/gms.html
+++ b/static/gms.html
@@ -19,10 +19,24 @@
 <body>
   <div id="contextMenu" class="context-menu themesExcluded" style="--ripple-duration: 300ms;"><div class="context-menu-item with-submenu themesExcluded" id="contextItem" anim="ripple" onclick="toggleSubmenu(event)"><i class="bi bi-file-spreadsheet"></i> Tab Cloak</div><div class="context-submenu themesExcluded" id="contextItem"><div class="context-menu-item themesExcluded" id="contextItem" anim="ripple" onclick="tabCloak()">Enable</div><div class="context-menu-item themesExcluded" anim="ripple" onclick="disableTabCloak()">Disable</div></div><div class="context-menu-item with-submenu themesExcluded" id="contextItem" anim="ripple" onclick="toggleSubmenu2(event)"><i class="bi bi-clock-history"></i> Last Visited Site</div><div class="context-submenu themesExcluded" id="contextItem"><div class="context-menu-item themesExcluded" id="contextItem" anim="ripple" onclick="vSite()">Visit Last Site</div><div class="context-menu-item themesExcluded" id="contextItem" anim="ripple" onclick="vAG()">Visit Last App/Game</div></div><div class="context-menu-item themesExcluded" id="contextItem" onclick="openWindow()"><i class="bi bi-box-arrow-up-right"></i> About:Blank Cloak</div><div class="context-menu-item themesExcluded" id="contextItem" onclick="openSettings()"><i class="bi bi-gear"></i> View all Settings</div></div>
   <nav id="mytopnav">
-    <button class="button-6" anim="ripple" onclick="send('/settings.html')"><i class="bi bi-gear" style="font-size:30px;"></i>Settings</button>
-    <button class="button-6 active" anim="ripple"><i class="bi bi-joystick" style="font-size:30px;"></i>Games</button>
-    <button class="button-6" anim="ripple" onclick="send('/apps')"><i class="bi bi-grid-fill" style="font-size:30px;"></i>Apps</button><br>
-    <a href="/" class="title" anim="ripple"><img src="/assets/img/doge.jpg" style="width:22px;height:22px;" id="logo"> Ezic Unblocker</a>    
+     <button class="button-6" anim="ripple" onclick="window.location.href='https://docs.google.com/document/d/1TesuQ9CXum2Pq63dnS1am04rknqt-qv9Y7c6zmcac5o/edit?usp=sharing'">
+    <i class="bi bi-joystick" style="font-size:30px;"></i> Updates
+  </button>
+    <button class="button-6" anim="ripple" onclick="window.location.href='https://docs.google.com/document/d/1yq3C8dk_Eo5a9PvbsxpEq1r86wivcgc8lylkM_R2Xy8/edit?usp=sharing'">
+    <i class="bi bi-joystick" style="font-size:30px;"></i> Stealth
+  </button>
+  <button class="button-6" anim="ripple" onclick="send('/inc.html')">
+    <i class="bi bi-joystick" style="font-size:30px;"></i>Other gamehubs
+  </button>
+  <button class="button-6" anim="ripple" onclick="send('/settings.html')">
+    <i class="bi bi-gear" style="font-size:30px;"></i>Settings
+  </button>
+  <button class="button-6" anim="ripple" onclick="send('/gms')">
+    <i class="bi bi-joystick" style="font-size:30px;"></i>Games
+  </button>
+  <button class="button-6" anim="ripple" onclick="send('/apps')">
+    <i class="bi bi-grid-fill" style="font-size:30px;"></i>Apps
+  </button>
   </nav>
   <div class="search-bar themesExcluded" style="display: flex; justify-content: center; border-radius: 10px; margin: 20px;">
     <form id="searchForm" onsubmit="return false;" autocomplete="off">
