--- a/static/inc.html
+++ b/static/inc.html
@@ -31,7 +31,7 @@
   <button class="button-6" anim="ripple" onclick="send('/settings.html')">
     <i class="bi bi-gear" style="font-size:30px;"></i>Settings
   </button>
-  <button class="button-6" anim="ripple" onclick="send('/gms')">
+  <button class="button-6" anim="ripple" onclick="send('/inc')">
     <i class="bi bi-joystick" style="font-size:30px;"></i>Games
   </button>
   <button class="button-6" anim="ripple" onclick="send('/apps')">
@@ -44,7 +44,7 @@
     <i class="bi bi-search searchIcon" style="margin-left: 140px;" id="search"></i>
     <input id="searchApps" style="width: 420px;" placeholder="Search for games" class="searchbar"></form>
   </div>
-  <div class="search-results themesExcluded" id="gmsContainer"></div>
+  <div class="search-results themesExcluded" id="incContainer"></div>
   <div id="searchMessage" class="themesExcluded" style="display: none;color:white;text-align: center;font-size: 30px;margin:20px;font-family:poppins;padding: 0;"></div>
   <div id="fetchMessage" class="themesExcluded" style="display:block;color:white;text-align: center;font-size: 30px;margin:20px;font-family:poppins;padding: 0;">Loading assets...</div>
   </div><br>
