--- a/static/settings.html
+++ b/static/settings.html
@@ -81,14 +81,15 @@
   <p style="font-weight: bold;">Themes</p>
   <p style="font-size:23px;">Customize your unblocker by choosing our themes. (Enable particles for effect)</p>
   <select id="dropdown" class="option" style="text-align:left;">
-    <option disabled value="placeholder" selected>Select a theme</option>
-    <option value="deepsea" class="option" style="color:black;">Deep Sea (Default)</option>
-    <option value="swamp" class="option" style="color:black;">Swamp</option>
-    <option value="ocean" class="option" style="color:black;">Ocean</option>
-    <option value="starry" class="option" style="color:black;">Starry</option>
-    <option value="magma" class="option" style="color:black;">Magma</option>
-    <option value="sunset" class="option" style="color:black;">Sunset</option>
-    <option value="equinox" class="option" style="color:black;">Equinox</option>
+    <option disabled value="placeholder">Select a theme</option>
+    <option value="japanesematrix" class="option" selected>Japanese Matrix (Default)</option>
+    <option value="deepsea" class="option">Deep Sea</option>
+    <option value="swamp" class="option">Swamp</option>
+    <option value="ocean" class="option">Ocean</option>
+    <option value="starry" class="option">Starry</option>
+    <option value="magma" class="option">Magma</option>
+    <option value="sunset" class="option">Sunset</option>
+    <option value="equinox" class="option">Equinox</option>
   </select>
 </div>
 <div class="settingscontainer"><br>
